--- a/crates/litesvm/Cargo.toml
+++ b/crates/litesvm/Cargo.toml
@@ -20,6 +20,7 @@ register-tracing = ["invocation-inspect-callback", "dep:hex", "dep:sha2"]
 [dependencies]
 ahash.workspace = true
 scc.workspace = true
+arc-swap.workspace = true
 agave-feature-set.workspace = true
 agave-precompiles = { workspace = true, optional = true, features = [
     "agave-unstable-api",
